added basic main page layout

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link>
+  <title>JoyOfConverting</title>
 </head>
 <body>
-
+  <div class="title">
+    <h1>Joy Of Converting</h1>
+  </div>
+  <div class="description">
+    <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
+  </div>
+  <div class="upload">
+    <p>Drag & drop .png or .paint:</p>
+    <div id="upload_rect" class="upload_rect"><span class="material-symbols-outlined">upload_file</span></div>
+  </div>
+  <img id="prev" alt="preview">
+  <script src="index.js"></script>
 </body>
 </html>
