--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <h1>Joy Of Converting</h1>
   </div>
   <div class="description">
-    <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
+    <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just as ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
   </div>
   <div class="upload">
     <p>Drag & drop .png or .paint:</p>
