fixed removing wrong codeline

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
     <p>Drag & drop .png or .paint:</p>
     <div id="upload_rect" class="upload_rect"><span class="material-symbols-outlined">upload_file</span></div>
   </div>
-  <img id="prev" alt="preview">
+  <script src="index.js"></script>
 </body>
 </html>
