--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
   <title>JoyOfConverting</title>
 </head>
@@ -20,7 +21,7 @@
       <label>
         <input id="author" type="text" autocomplete="off" placeholder="Author" class="inputbox">
       </label>
-      <button id="conv_btn" class="button">Convert</button>
+      <button id="conv_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">palette</span></button>
     </div>
   </div>
   <script src="convert_png.js"></script>
