--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </div>
   <div class="upload">
     <p>Drag & drop .png or .paint:</p>
-    <div id="upload_rect" class="upload_rect"><span class="material-symbols-outlined">upload_file</span></div>
+    <div id="upload_rect" class="upload_rect"><span class="upload_icon">upload_file</span></div>
   </div>
   <script src="index.js"></script>
 </body>
