--- a/src/pages/convert_paint.html
+++ b/src/pages/convert_paint.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
   <title>JoyOfConverting</title>
 </head>
@@ -9,6 +10,17 @@
   <div class="title">
     <h1>.paint ==> .png</h1>
   </div>
-
+  <div class="main_container">
+    <div class="preview">
+      <span class="palette_icon">palette</span>
+      <p class="prev_img">There is no preview available for .paint files.</p>
+    </div>
+    <div class="inputs">
+      <label>
+        <input id="Title" type="text" autocomplete="off" placeholder="File Name" class="inputbox">
+      </label>
+      <button id="conv_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">imagesmode</span></button>
+    </div>
+  </div>
 </body>
 </html>
