added home icon in header

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="title">
+    <span class="home_icon"></span>
     <h1>Joy Of Converting</h1>
+    <span class="home_icon"></span>
   </div>
   <div class="description">
     <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just as ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
