--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="title">
+    <button class="home_icon" onclick="location.href='../index.html'">home</button>
     <h1>.png ==> .paint</h1>
+    <span class="home_icon"></span>
   </div>
   <div class="main_container">
     <div class="preview">
