added converter logic (png to paint)

--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -18,12 +18,12 @@
     </div>
     <div class="inputs">
       <label>
-        <input id="Title" type="text" autocomplete="off" placeholder="Title" class="inputbox">
+        <input id="title_input" type="text" autocomplete="off" placeholder="Title" class="inputbox" value="Painting" onfocus="this.select()" spellcheck="false"/>
       </label>
       <label>
-        <input id="author" type="text" autocomplete="off" placeholder="Author" class="inputbox">
+        <input id="author_input" type="text" autocomplete="off" placeholder="Author" class="inputbox" value="Player" onfocus="this.select()" spellcheck="false">
       </label>
-      <button id="conv_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">palette</span></button>
+      <button id="convert_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">palette</span></button>
     </div>
   </div>
   <script src="convert_png.js"></script>
