--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -14,14 +14,16 @@
   </div>
   <div class="main_container">
     <div class="preview">
-      <img id="prev" alt="preview" class="prev_img">
+      <div class="preview_border">
+        <img id="prev" alt="preview" class="prev_img">
+      </div>
     </div>
     <div class="inputs">
       <label>
-        <input id="title_input" type="text" autocomplete="off" placeholder="Title" class="inputbox" value="Painting" onfocus="this.select()" spellcheck="false"/>
+        <input id="title_input" type="text" autocomplete="off" placeholder="Title" class="inputbox" value="Title" onfocus="this.select()" spellcheck="false"/>
       </label>
       <label>
-        <input id="author_input" type="text" autocomplete="off" placeholder="Author" class="inputbox" value="Player" onfocus="this.select()" spellcheck="false">
+        <input id="author_input" type="text" autocomplete="off" placeholder="Author" class="inputbox" value="Author" onfocus="this.select()" spellcheck="false">
       </label>
       <button id="convert_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">palette</span></button>
     </div>
