added kinda working .paint to .png converter

--- a/src/pages/convert_paint.html
+++ b/src/pages/convert_paint.html
@@ -22,10 +22,12 @@
     </div>
     <div class="inputs">
       <label>
-        <input id="Title" type="text" autocomplete="off" placeholder="File Name" class="inputbox" value="File-Name" onfocus="this.select()" spellcheck="false">
+        <input id="FileName" type="text" autocomplete="off" placeholder="File Name" class="inputbox" value="File-Name" onfocus="this.select()" spellcheck="false">
       </label>
-      <button id="conv_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">imagesmode</span></button>
+      <button id="convert_btn" class="button">Convert&nbsp;&nbsp;<span class="small_icons">imagesmode</span></button>
     </div>
   </div>
+  <script src="https://unpkg.com/prismarine-nbt@2.2.1/dist/index.umd.js"></script>
+  <script src="convert_paint.js"></script>
 </body>
 </html>
