added more header icons

--- a/src/pages/convert_paint.html
+++ b/src/pages/convert_paint.html
@@ -8,9 +8,15 @@
 </head>
 <body>
   <div class="title">
-    <button class="home_icon" onclick="location.href='../index.html'">home</button>
+    <div class="header_icon_group">
+      <button class="header_icon" title="Home" onclick="location.href='../index.html'">home</button>
+      <span class="header_icon"></span>
+    </div>
     <h1>.paint ==> .png</h1>
-    <span class="home_icon"></span>
+    <div class="header_icon_group">
+      <button class="header_icon" title="How to use" onclick="location.href='../index.html'">help</button>
+      <button class="header_icon" title="Sourcecode" onclick="location.href='../index.html'">folder_code</button>
+    </div>
   </div>
   <div class="main_container">
     <div class="preview">
