--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -8,9 +8,20 @@
 </head>
 <body>
   <div class="title">
-    <button class="home_icon" onclick="location.href='../index.html'">home</button>
+    <div class="header_icon_group">
+      <button class="header_icon" title="Home" onclick="location.href='../index.html'">home</button>
+      <span class="header_icon"></span>
+    </div>
     <h1>.png ==> .paint</h1>
-    <span class="home_icon"></span>
+    <div class="header_icon_group">
+      <script>
+        function OpenExt(){
+            window.open('https://github.com/HazDu/JoyOfConverting');
+        }
+      </script>
+      <button class="header_icon" title="How to use" onclick="location.href='../index.html'">help</button>
+      <button class="header_icon" title="Sourcecode" onclick="OpenExt()">folder_code</button>
+    </div>
   </div>
   <div class="main_container">
     <div class="preview">
