fixed convert_png.js not exporting canvas type

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
   <div class="title">
-    <span class="home_icon"></span>
+    <div class="header_icon_group">
+      <span class="header_icon"></span>
+      <span class="header_icon"></span>
+    </div>
     <h1>Joy Of Converting</h1>
-    <span class="home_icon"></span>
+    <div class="header_icon_group">
+      <script>
+          function OpenExt(){
+              window.open('https://github.com/HazDu/JoyOfConverting');
+          }
+      </script>
+      <button class="header_icon" title="How to use" onclick="location.href='pages/help.html'">help</button>
+      <button class="header_icon" title="Sourcecode" onclick="OpenExt()">folder_code</button>
+    </div>
   </div>
   <div class="description">
     <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just as ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
