--- a/src/pages/convert_paint.html
+++ b/src/pages/convert_paint.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
-  <title>JoyOfConverting</title>
+  <title>Paint to Png - JoyOfConverting</title>
 </head>
 <body>
   <div class="title">
@@ -14,8 +14,13 @@
     </div>
     <h1>.paint ==> .png</h1>
     <div class="header_icon_group">
-      <button class="header_icon" title="How to use" onclick="location.href='../index.html'">help</button>
-      <button class="header_icon" title="Sourcecode" onclick="location.href='../index.html'">folder_code</button>
+      <script>
+          function OpenExt(){
+              window.open('https://github.com/HazDu/JoyOfConverting');
+          }
+      </script>
+      <button class="header_icon" title="How to use" onclick="location.href='help.html'">help</button>
+      <button class="header_icon" title="Sourcecode" onclick="OpenExt()">folder_code</button>
     </div>
   </div>
   <div class="main_container">
