--- a/src/pages/convert_png.html
+++ b/src/pages/convert_png.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
-  <title>JoyOfConverting</title>
+  <title>Png to Paint - JoyOfConverting</title>
 </head>
 <body>
   <div class="title">
@@ -19,7 +19,7 @@
             window.open('https://github.com/HazDu/JoyOfConverting');
         }
       </script>
-      <button class="header_icon" title="How to use" onclick="location.href='../index.html'">help</button>
+      <button class="header_icon" title="How to use" onclick="location.href='help.html'">help</button>
       <button class="header_icon" title="Sourcecode" onclick="OpenExt()">folder_code</button>
     </div>
   </div>
