added help page

--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,16 @@
     </div>
   </div>
   <div class="description">
-    <p>Joy Of Converting is a conversion tool for the Joy of Painting minecraft mod. The mod supports importing / exporting images but just as ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.</p>
+    <p>
+      Joy Of Converting is a conversion tool for the <a href="https://modrinth.com/mod/joy-of-painting" target="_blank">Joy of Painting Minecraft mod</a>.
+      The mod supports importing / exporting images but just as ".paint" files, so I made this converter that can convert .paint into .png files and vice versa.
+    </p>
   </div>
   <div class="upload">
     <p>Drag & drop .png or .paint:</p>
     <div id="upload_rect" class="upload_rect"><span class="upload_icon">upload_file</span></div>
   </div>
+  <p style="color: white; margin-top: 80px">Made with ❤️ by Haz_Du</p>
   <script src="index.js"></script>
 </body>
 </html>
