--- a/src/pages/help.html
+++ b/src/pages/help.html
@@ -23,5 +23,43 @@
       <button class="header_icon" title="Sourcecode" onclick="OpenExt()">folder_code</button>
     </div>
   </div>
+  <div class="help_main_container">
+    <h1 class="help_title">
+      Overview
+    </h1>
+    <hr>
+    <p class="help_paragraph">
+      This converter is used to convert .paint files into .png files or .png files into .paint files.
+      The .paint file format is a file format that's used by the <a href="https://modrinth.com/mod/joy-of-painting" target="_blank">Joy of Painting Minecraft mod</a>.
+      The mod allows you to import and export .paint files and
+      to enjoy your paintings even outside of minecraft or import pixel arts, you can change the format between .paint and .png.
+    </p>
+    <h1 class="help_title">
+      How to use the converter
+    </h1>
+    <hr>
+    <p class="help_paragraph">
+      It's pretty easy! Just drag and drop a .png or .paint file into the drop area on the Home-Page.
+      The converter will then automatically forward you to one of two sites. <br><br>
+      <b><i>The .paint to .png site:</i></b><br>
+      On this site you'll see an input box. In there you write the name of the converted image file. E.g. "Cool Painting" will give you a file with the name "Cool Painting.png".
+      After putting in the text, click the "Convert" button and your image will be converted and automatically downloaded (This may take up to a few seconds).<br><br>
+      <b><i>The .png to .paint site:</i></b><br>
+      On this site you'll see two input boxes the one labeled with "Title" will set the signed title of your ingame item, as well as the file name of your converted file
+      and the one labeled "Author" will set the Author's name of the ingame item. After you made the input you'll need to click "Convert" and
+      your image will be converted and automatically downloaded (This may take up to a few seconds).
+    </p>
+    <h1 class="help_title">
+      Import / Export .paint files in minecraft
+    </h1>
+    <hr>
+    <p class="help_paragraph">
+      To <b>IMPORT</b> a .paint file you'll first need to put it in the "paintings" folder, the mod created in your minecraft directory.
+      Then you're going to open the chat ingame and type [/paintimport FileName] and type in <b>just</b> the file name without the ".paint" file type.
+      If you are in survival mode you'll need to have an <b>empty</b> canvas of the right size in your main hand and a full palette in your offhand.<br><br>
+      To <b>EXPORT</b> a .paint file you'll need to open the chat ingame and type [/paintexport FileName] and type in <b>just</b> the file name without the ".paint" file type.
+      After exporting, you'll find the .paint file in the "paintings" folder, the mod created in your minecraft directory. <br><br>
+    </p>
+  </div>
 </body>
 </html>
